refactor: add unit conversion utilities for getting formatted volume

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -30,5 +30,9 @@
   "setupWeightTextFieldInvalidValue": "Peso entre 30 e 200",
   "setupUnitMetric": "kg, ml",
   "setupUnitImperial": "lb, fl oz",
-  "homePageTodayAppBarTitle": "Hoje"
+  "homePageTodayAppBarTitle": "Hoje",
+  "mlUnit": "ml",
+  "flOzUnit": "fl oz",
+  "kgUnit": "kg",
+  "lbUnit": "lb"
 }
