--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,5 +30,9 @@
     "setupWeightTextFieldInvalidValue": "Weight between 30 and 200",
     "setupUnitMetric": "kg, ml",
     "setupUnitImperial": "lb, fl oz",
-    "homePageTodayAppBarTitle": "Today" 
+    "homePageTodayAppBarTitle": "Today",
+    "mlUnit": "ml",
+    "flOzUnit": "fl oz",
+    "kgUnit": "kg",
+    "lbUnit": "lb"
 }
