--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -28,5 +28,11 @@
   "setupAgeTextFieldInvalidValue": "Idade entre 10 e 120",
   "setupWeightTextFieldLabel": "Seu peso",
   "setupWeightTextFieldInvalidValue": "Peso entre 30 e 200",
-  "homePageTodayAppBarTitle": "Hoje"
+  "setupUnitMetric": "kg, ml",
+  "setupUnitImperial": "lb, fl oz",
+  "homePageTodayAppBarTitle": "Hoje",
+  "mlUnit": "ml",
+  "flOzUnit": "fl oz",
+  "kgUnit": "kg",
+  "lbUnit": "lb"
 }
