feat: update navigation labels from 'History' to 'Summary'

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,7 +9,7 @@
     "customCupDialogCancelButton": "Cancel",
     "dayLoadingFailed": "Day not found",
     "bottomNavHomeLabel": "Home",
-    "bottomNavHistoryLabel": "History",
+    "bottomNavSummaryLabel": "Summary",
     "dayHistoryBottomSheetTitle": "Day history",
     "dayHistoryBottomSheetNoItems": "Nothing here :(",
     "dayHistoryBottomSheetItemSubtitle": "added {time}",
