feat: add settings page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -34,5 +34,6 @@
     "mlUnit": "ml",
     "flOzUnit": "fl oz",
     "kgUnit": "kg",
-    "lbUnit": "lb"
+    "lbUnit": "lb",
+    "settingsPageTitle": "Settings"
 }
