feat(settings): implement settings unit page with metric and imperial options

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -35,5 +35,9 @@
     "flOzUnit": "fl oz",
     "kgUnit": "kg",
     "lbUnit": "lb",
-    "settingsPageTitle": "Settings"
+    "settingsPageTitle": "Settings",
+    "settingsGeneral": "General",
+    "settingsUnitSystem": "Unit system",
+    "metric": "Metric",
+    "imperial": "Imperial"
 }
