feat(settings): add feedback button

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -46,6 +46,8 @@
     "dailyGoal": "Daily goal",
     "updateAction": "Update",
     "cancelAction": "Cancel",
+    "settingsFeedback": "Send feedback",
+    "settingsFeedbackDescription": "Share your thoughts with us",
     "settingsContribute": "Contribute",
     "settingsContributeDescription": "Access the GitHub repository"
 }
