feat: add settings page (#24)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,9 +4,8 @@
     "customCupButton": "Custom",
     "customCupDialogTitle": "Add Custom Cup",
     "customCupDialogTextFieldAmount": "Amount",
-    "customCupDialogTextFieldAmountError": "Invalid Amount",
-    "customCupDialogAddButton": "Add",
-    "customCupDialogCancelButton": "Cancel",
+    "textFieldAmountError": "Invalid Amount",
+    "addAction": "Add",
     "dayLoadingFailed": "Day not found",
     "bottomNavHomeLabel": "Home",
     "bottomNavSummaryLabel": "Summary",
@@ -34,5 +33,25 @@
     "mlUnit": "ml",
     "flOzUnit": "fl oz",
     "kgUnit": "kg",
-    "lbUnit": "lb"
+    "lbUnit": "lb",
+    "metric": "Metric",
+    "imperial": "Imperial",
+    "settingsPageTitle": "Settings",
+    "settingsGeneralSection": "General",
+    "settingsUnitSystem": "Unit system",
+    "settingsUpdateDailyGoalAppBar": "Update Goal",
+    "settingsUpdateDailyGoalTitle": "Update",
+    "settingsUpdateDailyGoalDescription": "Help us with a few details so we can update your goal",
+    "settingsYouSection": "You",
+    "settingsAboutSection": "About",
+    "settingsUpdateYourDailyGoal": "Update your daily goal",
+    "settingsSetCustomDailyGoal": "Set a custom daily goal",
+    "dailyGoal": "Daily goal",
+    "updateAction": "Update",
+    "cancelAction": "Cancel",
+    "settingsFeedback": "Send feedback",
+    "settingsFeedbackDescription": "Share your thoughts with us",
+    "settingsContribute": "Contribute",
+    "settingsContributeDescription": "Access the GitHub repository",
+    "dailyGoalUpdated": "Daily goal saved successfully"
 }
