feat(settings): add setting to update sleep schedule

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -40,9 +40,13 @@
     "settingsGeneralSection": "General",
     "settingsUnitSystem": "Unit system",
     "settingsNotifications": "Notifications",
+    "settingsSleepSchedule": "Edit sleep schedule",
     "settingsUpdateDailyGoalAppBar": "Update Goal",
     "settingsUpdateDailyGoalTitle": "Update",
     "settingsUpdateDailyGoalDescription": "Help us with a few details so we can update your goal",
+    "settingsSleepScheduleAppBar": "Edit sleep schedule",
+    "settingsSleepScheduleTitle": "Update",
+    "settingsSleepScheduleDescription": "Help us with a few details so we can update your sleep schedule",
     "settingsYouSection": "You",
     "settingsAboutSection": "About",
     "settingsUpdateYourDailyGoal": "Update your daily goal",
