feat: add notifications (#25)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -39,9 +39,14 @@
     "settingsPageTitle": "Settings",
     "settingsGeneralSection": "General",
     "settingsUnitSystem": "Unit system",
+    "settingsNotifications": "Notifications",
+    "settingsSleepSchedule": "Edit sleep schedule",
     "settingsUpdateDailyGoalAppBar": "Update Goal",
     "settingsUpdateDailyGoalTitle": "Update",
     "settingsUpdateDailyGoalDescription": "Help us with a few details so we can update your goal",
+    "settingsSleepScheduleAppBar": "Edit sleep schedule",
+    "settingsSleepScheduleTitle": "Update",
+    "settingsSleepScheduleDescription": "Help us with a few details so we can update your sleep schedule",
     "settingsYouSection": "You",
     "settingsAboutSection": "About",
     "settingsUpdateYourDailyGoal": "Update your daily goal",
@@ -53,5 +58,13 @@
     "settingsFeedbackDescription": "Share your thoughts with us",
     "settingsContribute": "Contribute",
     "settingsContributeDescription": "Access the GitHub repository",
-    "dailyGoalUpdated": "Daily goal saved successfully"
+    "dailyGoalUpdated": "Daily goal saved successfully",
+    "notificationSetupTitle": "Notifications",
+    "notificationSetupDescription": "Let's adjust notifications to match your day",
+    "notificationsSettingsWakeUp": "You wake up at",
+    "notificationsSettingsSleep": "You sleep at",
+    "reminderNotificationTitle": "💧 Time to hydrate!",
+    "reminderNotificationBody": "Keep your body happy, take a sip!",
+    "sleepScheduleEditFailed": "Could not save your sleep schedule",
+    "notificationTaskCreationFailed": "Failed to create the notification task"
 }
