feat: add checkbox to not save custom cup

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,6 +4,7 @@
     "customCupButton": "Custom",
     "customCupDialogTitle": "Add Custom Cup",
     "customCupDialogTextFieldAmount": "Amount",
+    "doNotSaveLabel": "Do not save",
     "textFieldAmountError": "Invalid Amount",
     "addAction": "Add",
     "dayLoadingFailed": "Day not found",
