chore(translation): translate pt-br "do not save" label

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -4,7 +4,7 @@
   "customCupButton": "Personalizado",
   "customCupDialogTitle": "Adicionar Copo Personalizado",
   "customCupDialogTextFieldAmount": "Quantidade",
-  "doNotSaveLabel": "Do not save",
+  "doNotSaveLabel": "Não salvar",
   "textFieldAmountError": "Quantidade inválida",
   "addAction": "Adicionar",
   "dayLoadingFailed": "Dia não encontrado",
