--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -56,6 +56,8 @@
     "dailyGoal": "Daily goal",
     "updateAction": "Update",
     "cancelAction": "Cancel",
+    "editAction": "Edit",
+    "deleteAction": "Delete",
     "settingsFeedback": "Send feedback",
     "settingsFeedbackDescription": "Share your thoughts with us",
     "settingsContribute": "Contribute",
