fix(translation): minor fix in the German translation

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -68,7 +68,7 @@
     "notificationsSettingsWakeUp": "Du wachst auf um",
     "notificationsSettingsSleep": "Du schläfst ein um",
     "reminderNotificationTitle": "💧 Zeit etwas zu trinken!",
-    "reminderNotificationBody": "Machen deinen Körper glücklich, trinke einen Schluck!",
+    "reminderNotificationBody": "Mache deinen Körper glücklich, trink einen Schluck!",
     "sleepScheduleEditFailed": "Schlafplan konnte nicht gespeichert werden",
     "notificationTaskCreationFailed": "Beim erstellen der Benachrichtungsaufgabe ist ein Fehler aufgetreten",
     "pageNotAvailableTitle": "Nicht verfügbar",
