refactor: move value not supported string to end of the localization file

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -27,7 +27,6 @@
     "setupAgeTextFieldLabel": "Your age",
     "setupAgeTextFieldInvalidValue": "Age between 10 and 120",
     "setupWeightTextFieldLabel": "Your weight",
-    "valueNotSupported": "Value not supported",
     "setupWeightTextFieldInvalidWeight": "Weight between {minWeight} and {maxWeight}",
     "@setupWeightTextFieldInvalidWeight": {
         "placeholders": {
@@ -82,5 +81,6 @@
     "sleepScheduleEditFailed": "Could not save your sleep schedule",
     "notificationTaskCreationFailed": "Failed to create the notification task",
     "pageNotAvailableTitle": "Not Available",
-    "pageNotAvailableDescription": "Sorry, this page isn't available yet :("
+    "pageNotAvailableDescription": "Sorry, this page isn't available yet :(",
+    "valueNotSupported": "Value not supported"
 }
