fix: update weight validation logic for metric and imperial units (#49)
* fix: allow weight input above 200 pounds

* fix(settings): update daily goal using metric even if imperial is selected

* feat: make weight validation text dynamic

* refactor: update localization strings for weight validation

* refactor: move value not supported string to end of the localization file

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -27,7 +27,19 @@
     "setupAgeTextFieldLabel": "Your age",
     "setupAgeTextFieldInvalidValue": "Age between 10 and 120",
     "setupWeightTextFieldLabel": "Your weight",
-    "setupWeightTextFieldInvalidValue": "Weight between 30 and 200",
+    "setupWeightTextFieldInvalidWeight": "Weight between {minWeight} and {maxWeight}",
+    "@setupWeightTextFieldInvalidWeight": {
+        "placeholders": {
+            "minWeight": {
+                "type": "String",
+                "example": "30"
+            },
+            "maxWeight": {
+                "type": "String",
+                "example": "200"
+            }
+        }
+    },
     "setupUnitMetric": "kg, ml",
     "setupUnitImperial": "lb, fl oz",
     "homePageTodayAppBarTitle": "Today",
@@ -69,5 +81,6 @@
     "sleepScheduleEditFailed": "Could not save your sleep schedule",
     "notificationTaskCreationFailed": "Failed to create the notification task",
     "pageNotAvailableTitle": "Not Available",
-    "pageNotAvailableDescription": "Sorry, this page isn't available yet :("
+    "pageNotAvailableDescription": "Sorry, this page isn't available yet :(",
+    "valueNotSupported": "Value not supported"
 }
